--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       
         <td> 
-            <a href="#">Obrazek swiateczny</a>
+            <a href="https://milkogamer.github.io/GIMP01/PROJEKTGIMP01">Obrazek swiateczny</a>
 
     </td>
      
